# my_trading_project

./: main.py  main_backtest.ipynb  montecarlo_logic.py  old_main.ipynb  pyproject.toml  requirement.txt  strategies.py
