[project]
name = "my-trading-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens==3.0.0",
    "backtrader==1.9.78.123",
    "colorama==0.4.6",
    "comm==0.2.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "executing==2.2.0",
    "ipykernel==6.29.5",
    "ipython==9.1.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "matplotlib-inline==0.1.7",
    "metatrader5==5.0.4874",
    "nest-asyncio==1.6.0",
    "numpy==2.2.4",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "platformdirs==4.3.7",
    "prompt-toolkit==3.0.51",
    "psutil==7.0.0",
    "pure-eval==0.2.3",
    "pygments==2.19.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pywin32==310",
    "pyzmq==26.4.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.4.2",
    "traitlets==5.14.3",
    "tzdata==2025.2",
    "wcwidth==0.2.13",
]
